templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nationalparks
  namespace: native-aah2
  uid: 364e12ea-94bd-49b1-9c86-28bd8297d93d
  resourceVersion: '299086'
  creationTimestamp: '2024-08-13T08:44:48Z'
  labels:
    app: nationalparks
    app.kubernetes.io/component: nationalparks
    app.kubernetes.io/instance: nationalparks
    type: parksmap-backend
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: v1
      time: '2024-08-13T08:44:48Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2024-08-13T10:06:20Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            'f:type': {}
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: nationalparks
status:
  loadBalancer: {}
